# tsql-yaboiteedoh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/tsql/: __main__.py  cli.py
src/tsql/classes/: app.py  column.py  database.py  filter.py  functions.py  group.py  table.py  top_level.py
src/tsql/templater/: __init__.py  templater.py
src/tsql/templater/templates/: classes.jinja  database.jinja  dataclasses.jinja  table.jinja  table_init.jinja
src/tsql_yaboiteedoh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
