[tool.uv]
package = true

[project]
name = "tsql-yaboiteedoh"
version = "0.1.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "jinja2>=3.1.6",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
tsql = 'tsql:main'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**"]
